feat: Añadido configuración básica

--- a/src/pages/matriculas.astro
+++ b/src/pages/matriculas.astro
@@ -2,7 +2,7 @@
 import DashboardLayout from '../layouts/DashboardLayout.astro';
 ---
 
-<DashboardLayout title="Inicio">
+<DashboardLayout title="Matrículas">
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
 	<div class="bg-surface p-6 rounded-2xl border border-brand-light">
 	<p class="text-brand-dark font-bold">Último repostaje</p>
